# lore

./: .gitignore  BUILD.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  STYLE.md  TEMP-DOC-CLI-CHANGES.md
.github/workflows/: prerelease.yml  release.yml
scripts/: install-cli.ps1  install-cli.sh  install-personal-first.sh  install-server.sh  prerelease.sh  quick-deploy-personal.sh  quick-deploy.sh  release.sh
src/: api.rs  audit.rs  auth.rs  config.rs  error.rs  lib.rs  librarian.rs  main.rs  manager.rs  model.rs  order.rs  prompt.rs  store.rs  ui.rs  updater.rs  versioning.rs
tests/: integration.rs  run-all.sh  run-smoke.sh
tests/playwright/: agent-drafts.spec.ts  agent-flow.spec.ts  chat-smoke.spec.ts  lore.test.ts  package-lock.json  package.json  playwright.config.ts  screenshot.ts  ss.cjs
tests/playwright/helpers/: lore.ts  mock-llm.ts
tests/scripts/: restart-test-server.sh
